[package]
name = "transaction-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.79"
axum = "0.7.5"
clap = { version = "4.5.4", features = ["derive", "env", "string"] }
derive_more = { version = "=1.0.0-beta.6", features = ["display", "from", "deref", "constructor"]}
dotenv = "0.15.0"
futures = "0.3.30"
homedir = "0.2.1"
humantime = "2.1.0"
prometheus-client = "0.22.2"
regex = "1.10.4"
serde_json = "1.0.115"
strum = { version = "0.26.2", features = ["derive"] }
strum_macros = "0.26.4"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "tokio-macros", "parking_lot", "signal", "process"] }
tower-http = { version = "0.5.2", features = ["timeout"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

near-crypto = "0.26.0"
near-jsonrpc-client = "0.13.0"
near-jsonrpc-primitives = "0.26.0"
near-primitives = "0.26.0"

[dev-dependencies]
more-asserts = "0.3.1"
